@@ -15,7 +15,7 @@
 
 
 void WaitAWhile(const bool waitLong=false);
-void setOptions(int argc, char **argv);
+void setOptions(int argc, char **argv, const wxString& executable);
 wxString getArg(int &argc, char** &argv);
 wxString NumToStr(const long l);
 wxString qtString(const wxString& value);
